[FEATURE] End time and non-stop
* add separate field for end time
* add field to indicate if events occurs through the night or start and ends each day
* show date and time related fields a palette
* rename fields:
  * remove `event_` prefix
  * change `stop_` to `end_`
* re-format langauge files (indentation)

--- a/Resources/Private/Partials/Event/Table.html
+++ b/Resources/Private/Partials/Event/Table.html
@@ -5,7 +5,7 @@
     <table class="table table-striped">
       <thead>
       <tr>
-        <th>{f:translate(key: 'tx_events_domain_model_event.event_date')}</th>
+        <th>{f:translate(key: 'tx_events_domain_model_event.date')}</th>
         <th>{f:translate(key: 'tx_events_domain_model_event.title')}</th>
         <th>{f:translate(key: 'tx_events_domain_model_event.location')}</th>
         <f:if condition="{exportEnabled}">
